[gd_scene load_steps=9 format=3 uid="uid://ejuahwmegov4"]

[ext_resource type="Script" path="res://Scenes/Asteroid Refinery Map/asteroid_refinery_map.gd" id="1_l8gp1"]
[ext_resource type="Texture2D" uid="uid://sc0h8j3to4lq" path="res://stolen_star_image.jpeg" id="1_m6ile"]
[ext_resource type="PackedScene" uid="uid://1cdn6gf8jn6h" path="res://Instantiated Scenes/Checkpoint/checkpoint.tscn" id="1_ml2ub"]
[ext_resource type="PackedScene" uid="uid://dj3hxgqwdtfjo" path="res://Instantiated Scenes/Boost Pickup/boost_pickup.tscn" id="2_kfyu2"]
[ext_resource type="PackedScene" uid="uid://b1jbitn8dtmim" path="res://Instantiated Scenes/Player/player_phantom.tscn" id="4_n3q3w"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_d8q2h"]
panorama = ExtResource("1_m6ile")

[sub_resource type="Sky" id="Sky_2fgoa"]
sky_material = SubResource("PanoramaSkyMaterial_d8q2h")

[sub_resource type="Environment" id="Environment_x0umd"]
background_mode = 2
sky = SubResource("Sky_2fgoa")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.5
reflected_light_source = 2
tonemap_mode = 2
sdfgi_read_sky_light = false
glow_enabled = true
glow_normalized = true
glow_blend_mode = 0
fog_light_color = Color(0.517647, 0.552941, 0.607843, 1)
volumetric_fog_albedo = Color(0, 0, 0, 1)
adjustment_saturation = 3.0

[node name="asteroid_refinery_map" type="Node3D"]
script = ExtResource("1_l8gp1")

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x0umd")

[node name="checkpoint" parent="." instance=ExtResource("1_ml2ub")]

[node name="checkpoint2" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -500, 0, 1500)
CHECKPOINT_NUMBER = 1

[node name="checkpoint3" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(-0.373047, -0.504422, 0.778713, -0.21793, 0.863457, 0.454916, -0.901855, 0, -0.432039, -1873.86, -385.175, 1918.19)
CHECKPOINT_NUMBER = 2

[node name="checkpoint4" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(-0.467427, 0.70185, -0.537511, -0.485774, -0.711918, -0.507145, -0.738604, 0.0240557, 0.67371, -1398.25, 768.383, 1499.85)
CHECKPOINT_NUMBER = 3

[node name="checkpoint5" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1398.25, 768.383, -367.397)
CHECKPOINT_NUMBER = 4

[node name="checkpoint6" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(0.381443, -0.292539, 0.876882, 0.116692, 0.956254, 0.268257, -0.916997, 0, 0.398893, -2495.3, 349.166, -904.778)
CHECKPOINT_NUMBER = 5

[node name="checkpoint7" parent="." instance=ExtResource("1_ml2ub")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -500, 0, -1500)
CHECKPOINT_NUMBER = 6

[node name="boost_pickup" parent="." instance=ExtResource("2_kfyu2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 326.296, 0, -1056.27)

[node name="boost_pickup2" parent="." instance=ExtResource("2_kfyu2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1813.88, 622.714, 2157.89)

[node name="boost_pickup3" parent="." instance=ExtResource("2_kfyu2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1624.59, 695.059, -1115.63)

[node name="player_phantom" parent="." instance=ExtResource("4_n3q3w")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -3.99884, 0, -542.958)
